fix: horizontal scroll on main page

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -8,6 +8,9 @@
   padding: 110px 70px 96px;
   margin: 0 auto;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 @media screen and (max-width: 768px) {
   .aboutMe__wrapper {
@@ -24,21 +27,16 @@
   justify-content: space-between;
   padding-top: 66px;
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .aboutMe__info-wrapper {
     flex-direction: column-reverse;
-    align-items: center;
     padding-top: 60px;
   }
 }
 .aboutMe__text-wrapper {
   max-width: 600px;
 }
-@media screen and (max-width: 768px) {
-  .aboutMe__text-wrapper {
-    max-width: 364px;
-  }
-}
+
 .aboutMe__name {
   font-size: 50px;
   font-weight: 400;
@@ -50,14 +48,14 @@
   .aboutMe__name {
     font-size: 40px;
     line-height: 40px;
-    padding: 40px 0 20px;
+    padding: 0 0 20px;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .aboutMe__name {
     font-size: 30px;
     line-height: 36px;
-    padding-bottom: 16px;
+    padding: 40px 0 20px;
   }
 }
 .aboutMe__title {
@@ -74,7 +72,7 @@
     padding-bottom: 20px;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .aboutMe__title {
     font-size: 11px;
     line-height: 16px;
@@ -86,38 +84,41 @@
   font-weight: 400;
   line-height: 22px;
   margin: 0;
-  padding-bottom: 99px;
+  padding: 0 49px 99px 0;
+  max-width: 600px;
 }
 @media screen and (max-width: 768px) {
   .aboutMe__description {
     font-size: 12px;
     line-height: 18px;
-    padding-bottom: 87px;
+    padding: 0 49px 87px 0;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .aboutMe__description {
     font-size: 11px;
     line-height: 16px;
-    padding-bottom: 40px;
+    padding: 0 0 40px 0;
   }
 }
 
 .aboutMe__photo {
-  height: 327px;
+  max-height: 327px;
   width: 270px;
   border-radius: 10px;
 }
 @media screen and (max-width: 768px) {
   .aboutMe__photo {
-    height: 307px;
+    max-height: 307px;
     width: 255px;
+    max-width: 364px;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .aboutMe__photo {
-    height: 352px;
     width: 292px;
+    max-height: 352px;
+    align-self: center;
   }
 }
 .aboutMe__links {
